--- a/index.html
+++ b/index.html
@@ -6,26 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Site</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width:device-width, initial-scale='1.0">
 </head>
 
 <body>
-    <div id="imagem_fundo">
+    <header>
+        <ul id="menu">
+            <li><a href="#inicio">inicio</a></li>
+            <li><a href="#projeto">projeto</a></li>
+        </ul>
+    </header>
+    <div id="imagem_fundo" id="inicio">
         <h1 id="titulo">Fome zero e agricultura sustentável </h1>
         <h2 id="subtitulo">Acabar com a fome, alcançar a segurança alimentar e melhoria da nutrição e promover a
             agricultura
             sustentável.</h2>
         <a id="acao" href="https://www.ipea.gov.br/ods/ods2.html" target="_blank">começar</a>
     </div>
-    <section id="projeto"> 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/BWzkwD70ups?si=smtTxFjYoc0UtxMI"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-
-        <h3>Projeto</h3>
-<p>Como Acabar com a sub</p>
+    <section id="projeto">
+        <div class="coluna dois">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/BWzkwD70ups?si=VqxWb9sLbKBf3oB3"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+        <div class="coluna dois">
+            <h3 class="centralizado">Agricultura sustentável na prática: Projeto de extensão aplica conhecimentos
+                científicos para nutrir
+                pessoas, animais e plantas</h3>
+            <p class="justificada">A busca por uma alimentação saudável é uma tendência mundial. A preocupação com
+                fatores climáticos e o uso de
+                recursos naturais tem levado milhares de pessoas a optarem pelos alimentos chamados de orgânicos. Na
+                UFLA, um projeto de extensão vinculado ao Departamento de Agricultura busca alinhar a energia renovável,
+                o
+                desenvolvimento sustentável e a prática da agricultura orgânica.</p>
+            <p class="justificada">Em 2017 no sítio trovão nasceu sob a orientação do professor de Agrometeorologia e de
+                Energia na Agricultura
+                Pedro Castro Neto. “A agricultura familiar sempre foi muito forte na minha vida, meus pais eram
+                agricultores. Minha meta sempre foi devolver ao agricultor todo o conhecimento que recebi da
+                agricultura. Ao
+                trabalhar com energias renováveis e sustentabilidade, pudemos dar novas opções de renda para o
+                agricultor
+                familiar. E, depois da construção do laboratório de biodiesel, a criação do sítio veio como complemento,
+                para que pudéssemos praticar e dar mais oportunidade de treinamento aos estudantes da UFLA”.</p>
+        </div>
     </section>
-
+    <footer>
+        <h4>Créditos</h4>
+        <h6>Criação: Diene Caroline</h6>
+        <p>https://ufla.br/noticias/extensao/14598-agricultura-sustentavel-na-pratica-projeto-de-extensao-aplica-conhecimentos-cientificos-para-nutrir-pessoas-animais-e-plantas
+        </p>
+        <p><b>https://www.ipea.gov.br/ods/ods2.html</b></p>
+    </footer>
 </body>
 
 </html>
